Fixed background display on mobile devices

--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -54,7 +54,11 @@
     position: fixed;
     inset: 0;
     z-index: -1000;
-    background: fixed url("https://c.wallhere.com/photos/a3/43/mountains_high_snow-988481.jpg!d") center/cover no-repeat;
+    background: fixed url("https://c.wallhere.com/photos/a3/43/mountains_high_snow-988481.jpg!d") center no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     filter: blur(2px);
     -webkit-filter: blur(2px);
 }
